--- a/src/app/components/navigation/channels/channels.component.html
+++ b/src/app/components/navigation/channels/channels.component.html
@@ -14,7 +14,7 @@
     <ul id="dropList" class="flex flex-col w-full gap-2 text-lg">
 
         @for (channel of channelService.channels; track $index) {
-            <li class="flex items-center gap-4 px-10 cursor-pointer h-9 hover:bg-primary hover:font-bold hover:text-purple3"> <span class="font-bold">#</span> {{channel.name}}</li>
+            <li (click)="channelNavService.openChannel()" class="flex items-center gap-4 px-10 cursor-pointer h-9 hover:bg-primary hover:font-bold hover:text-purple3"> <span class="font-bold">#</span> {{channel.name}}</li>
         }
         <li (click)="channelNavService.addCannelPopup()" class="flex gap-3 cursor-pointer hover:text-purple3 pl-7 hover:font-bold"><img src="/assets/icons/add_circle.svg" alt=""> Channel hinzufügen</li>
     </ul>
