--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,26 +1,10 @@
-<div
-  class="relative min-h-screen overflow-hidden transition-colors duration-700"
-  [ngClass]="{
-    'bg-gradient-to-b from-[#727CFA] to-[#444DF2]': !splashDone,
-    'bg-white': splashDone
-  }"
->
-  <!-- Splash-Logo in der Mitte -->
-  <div
-    class="absolute inset-0 flex items-center justify-center transition-all duration-700 ease-in-out"
-    [ngClass]="{
-      'translate-y-0 opacity-100 z-50': !showContent,
-      '-translate-y-[250px] opacity-0 z-0': showContent
-    }"
-  >
-  <img src="assets/icons/Logo.png" alt="Logo" class="h-24 animate-pulse" />
-</div>
+<app-splash-screen *ngIf="showSplash" class="splash-screen"></app-splash-screen>
+
 
   <div
     class="flex flex-col items-center justify-center min-h-screen px-4 transition-opacity duration-700 ease-in-out"
     [ngClass]="{ 'opacity-0': !showContent, 'opacity-100': showContent }"
   >
-    <!-- Logo oben (falls du es auch danach zeigen willst) -->
     <img *ngIf="showContent" src="assets/imgs/icons/logo.svg" alt="Logo" class="h-16 mb-4" />
 
     <div class="w-full max-w-sm animate-slide-fade-up">
@@ -41,4 +25,3 @@
       }
     </div>
   </div>
-</div>
