--- a/src/app/components/landing-page/login/login.component.html
+++ b/src/app/components/landing-page/login/login.component.html
@@ -12,15 +12,30 @@
       <div class="relative">
         <img src="assets/imgs/icons/mail.svg" alt="Mail Icon"
           class="absolute w-5 h-5 transform -translate-y-1/2 left-4 top-1/2" />
-        <input type="email" placeholder="beispielname@email.com"
-          class="w-full py-2 pl-12 pr-4 transition duration-200 border border-white rounded-full bg-primary input-fancy focus:bg-primary focus:outline-none focus:border-purple2 focus:ring-2 focus:ring-purple2 placeholder-textgray" />
+          <input
+          type="email"
+          name="login_email"
+          placeholder="beispielname@email.com"
+          autocomplete="disabled"
+          autocapitalize="off"
+          class="w-full py-2 pl-12 pr-4 transition duration-200 border border-white rounded-full bg-primary input-fancy focus:bg-primary focus:outline-none focus:border-purple2 focus:ring-2 focus:ring-purple2 placeholder-textgray"
+        />
+        
       </div>
 
       <div class="relative">
         <img src="assets/imgs/icons/lock.svg" alt="Lock Icon"
           class="absolute w-5 h-5 transform -translate-y-1/2 left-4 top-1/2" />
-        <input type="password" placeholder="Passwort"
-          class="w-full py-2 pl-12 pr-4 transition duration-200 border border-white rounded-full bg-primary input-fancy focus:bg-primary focus:outline-none focus:border-purple2 focus:ring-2 focus:ring-purple2 placeholder-textgray" />
+          <input
+          type="password"
+          name="login_password"
+          placeholder="Passwort"
+          autocomplete="disabled"
+          autocapitalize="off"
+          data-lpignore="true"
+          class="w-full py-2 pl-12 pr-4 transition duration-200 border border-white rounded-full bg-primary input-fancy focus:bg-primary focus:outline-none focus:border-purple2 focus:ring-2 focus:ring-purple2 placeholder-textgray"
+        />
+        
       </div>
 
       <div class="text-right">
