--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -2,11 +2,11 @@
 
 
 
-<section class="flex h-full gap-3 bg-primary p-3">
+<section class="flex h-full gap-3 p-3 border border-green-600 bg-primary">
   
     @if (!channelNavService.showChannel && channelNavService.mobile && !channelNavService.showThread || !channelNavService.mobile) {
-        <div class="flex">
-            <app-navigation></app-navigation>
+        <div class="flex w-full h-[100% - 3rem] lg:max-w-[366px] my-6  rounded-[30px]">
+            <app-navigation class="w-full"></app-navigation>
         </div>
     }
 
@@ -22,7 +22,7 @@
     }
 
     @if (channelMessageService.messages[0].answers !== undefined && (!channelNavService.showChannel && channelNavService.mobile && channelNavService.showThread || !channelNavService.mobile)) {
-        <div class="flex flex-col w-full max-w-[485px] h-[100% - 3rem] my-6 pb-4 bg-white rounded-[30px]">
+        <div class="flex flex-col w-full lg:max-w-[485px] h-[100% - 3rem] my-6 pb-4 bg-white rounded-[30px]">
             <app-chat-header [chatType]="'thread'" class="mb-[10px]"></app-chat-header>
             <div class="flex flex-1 w-full overflow-y-auto">
                 <app-chat-messages [messages]="channelMessageService.messages[0].answers" [chatType]="'thread'" [threadHeadMessage]="channelMessageService.messages[0]"></app-chat-messages>
