--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -5,7 +5,7 @@
 <section class="flex h-full gap-3 p-3 border border-green-600 bg-primary">
   
     @if (channelNavService.showNav()) {
-        <div class="flex w-full h-[100% - 3rem] lg:max-w-[366px] my-6  rounded-[30px]">
+        <div class="flex w-full h-[100% - 3rem] xl:max-w-[366px] my-6  rounded-[30px]">
             <app-navigation class="w-full"></app-navigation>
         </div>
     }
@@ -21,7 +21,7 @@
     }
 
     @if (channelMessageService.messages[0].answers !== undefined && channelNavService.showThread()) {
-        <div class="flex flex-col w-full lg:max-w-[485px] h-[100% - 3rem] my-6 pb-4 bg-white rounded-[30px]">
+        <div class="flex flex-col w-full xl:max-w-[485px] h-[100% - 3rem] my-6 pb-4 bg-white rounded-[30px]">
             <app-chat-header [chatType]="'thread'" class="mb-[10px]"></app-chat-header>
             <div class="flex flex-1 w-full overflow-y-auto">
                 <app-chat-messages [messages]="channelMessageService.messages[0].answers" [chatType]="'thread'" [threadHeadMessage]="channelMessageService.messages[0]"></app-chat-messages>
