--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -5,8 +5,9 @@
 <section class="flex h-full gap-3 p-3 border border-green-600 bg-primary">
   
     @if (!channelNavService.showChannel && channelNavService.mobile && !channelNavService.showThread || !channelNavService.mobile) {
-        <div class="flex w-full h-[100% - 3rem] lg:max-w-[366px] my-6  rounded-[30px]">
-            <app-navigation class="w-full"></app-navigation>
+        <div class="flex flex-col w-full h-[100% - 3rem] lg:max-w-[366px] my-6  rounded-[30px] border border-blue-700">
+            <app-search class="lg:hidden"></app-search>
+            <app-navigation class="w-full h-full"></app-navigation>
         </div>
     }
 
