--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,4 +1,15 @@
-<section class="flex flex-col h-full max-w-[1024px] rounded-[30px]  bg-white">
+<section class="flex flex-col h-full max-w-[1024px] rounded-[30px]  bg-white border border-red-600 overflow-auto">
+
+    <div class="items-center justify-between hidden w-full p-3 lg:flex">
+
+        <div class="flex items-center gap-4 text-2xl font-bold">
+            <img src="/assets/imgs/workspace-logo.svg" alt="">
+            Devspace
+        </div>
+
+        <img class="cursor-pointer hover:scale-[1.1] active:scale-[0.9] duration-150 size-8"
+            src="/assets/icons/edit_square.svg" alt="">
+    </div>
 
 
     <app-channels></app-channels>
