--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -39,7 +39,7 @@
                         <div class="w-full h-[1px] bg-lightpurple"></div>
                     </div>
                 }
-                <div class="flex gap-5 mt-[25px]"  [ngClass]="{ 'flex-row-reverse': fromCurrentUser(message.user.name)}">
+                <div class="flex gap-5 mt-[25px] hover:bg-primary"  [ngClass]="{ 'flex-row-reverse': fromCurrentUser(message.user.name)}">
                     <div class="w-max">
                         <img class="min-w-[50px] size-[50px] rounded-full" src="assets/imgs/avatar{{ message.user.avatar }}.svg" alt="Avatar">
                     </div>
@@ -48,7 +48,7 @@
                             <span class="text-lg font-bold">{{ message.user.name }}</span>
                             <span class="text-sm">{{ message.time }}</span>
                         </div>
-                        <div class="bg-primary p-[15px] rounded-[30px]" [ngClass]="{ 'bg-purple2 text-white rounded-se-none rounded-ss-[30px]': fromCurrentUser(message.user.name), ' rounded-ss-none': !fromCurrentUser(message.user.name) }">
+                        <div class="msg-content bg-primary p-[15px] rounded-[30px]" [ngClass]="{ 'bg-purple2 text-white rounded-se-none rounded-ss-[30px]': fromCurrentUser(message.user.name), ' rounded-ss-none': !fromCurrentUser(message.user.name) }">
                             <span>{{ message.content }}</span>
                         </div>
                         @if (message.answers) {
