--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<section class="flex flex-col h-full max-w-[1024px] rounded-[30px]  bg-white border border-red-600 overflow-auto">
+<section class="flex flex-col h-full max-w-[1024px] rounded-[30px]  bg-white overflow-auto">
 
     <div class="items-center justify-between hidden w-full p-3 lg:flex">
 
