--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -5,7 +5,7 @@
 <section class="flex h-full gap-3 p-3 border border-green-600 bg-primary">
   
     @if (!channelNavService.showChannel && channelNavService.mobile && !channelNavService.showThread || !channelNavService.mobile) {
-        <div class="flex flex-col w-full h-[100% - 3rem] lg:max-w-[366px] my-6  rounded-[30px] border border-blue-700">
+        <div class="flex flex-col w-full h-[100% - 3rem] lg:max-w-[366px] my-6  rounded-[30px]">
             <app-search class="lg:hidden"></app-search>
             <app-navigation class="w-full h-full"></app-navigation>
         </div>
@@ -35,7 +35,7 @@
 </section>
 
 
-<div [ngClass]="{ hidden: channelNavService.hideAddChannelPopUp() }"
+<div [ngClass]="{ 'hidden': channelNavService.hideAddChannelPopUp() }"
     class="absolute flex top-0 bottom-0 left-0 right-0 bg-white lg:bg-[rgba(0,0,0,0.1)] justify-center lg:items-center">
     <app-add-channel class="top-[20%]"></app-add-channel>
 </div>
