--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -27,7 +27,7 @@
 
     <div class="flex gap-4 p-5 m-0 ">
       <button routerLink="legal" class="hover:scale-[1.1] active:scale-[0.9] duration-150 px-3 py-2 border border-textgray rounded-full text-textgray">Legal Notice</button>
-      <button class="hover:scale-[1.1] active:scale-[0.9] duration-150 px-3 py-2 border border-textgray rounded-full text-textgray">Privacy Policy</button>
+      <button routerLink="privacy" class="hover:scale-[1.1] active:scale-[0.9] duration-150 px-3 py-2 border border-textgray rounded-full text-textgray">Privacy Policy</button>
     </div>
 
   </div>
