--- a/src/app/components/privacy-policy-page/privacy-policy-page.component.html
+++ b/src/app/components/privacy-policy-page/privacy-policy-page.component.html
@@ -1,6 +1,6 @@
 <section class="flex items-center justify-center w-full h-screen bg-primary">
   <div
-    class="bg-white min-w-[670px] min-h-[470px] rounded-[30px] shadow-md py-12 px-14 flex flex-col gap-8"
+    class="bg-white min-h-[470px] rounded-[30px] shadow-md py-12 px-14 flex flex-col gap-8"
   >
     <img
       routerLink=""
@@ -9,7 +9,7 @@
       alt=""
     />
 
-    <div class="flex flex-col gap-4 h-[80vh] overflow-auto">
+    <div class="flex flex-col gap-4 h-[80vh] overflow-auto w-full text-center">
       <h1 class="text-5xl font-bold text-purple1">Datenschutz</h1>
 
       <h1>Datenschutz&shy;erkl&auml;rung</h1>
