--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -3,7 +3,7 @@
 
 
 <button
-  (click)="toggleMessagesView()"
+  (click)="channelNavService.toggleNav()"
   class="w-[60px] h-[347px] fixed top-[581px] left-0 rounded-tr-[30px] rounded-br-[30px] pt-[23px] pr-[14px] pb-[23px] pl-[14px] gap-[10px] shadow-[4px_4px_7px_rgba(0,0,0,0.2)] bg-transparent text-black hover:bg-white/20 transition-all ease-in duration-100 z-50"
 >
   Msg
