--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar {
+    width: 0px;
+    border: none;
+}
+
 body {
     width: 100%;
     max-height: 100vh;
@@ -35,6 +40,6 @@ body {
 }
 
 
-.d-none{
+.d-none {
     display: none;
 }
