--- a/src/app/components/navigation/direct-messages/direct-messages.component.html
+++ b/src/app/components/navigation/direct-messages/direct-messages.component.html
@@ -1,8 +1,8 @@
-<section class="h-[489px] ">
+<section class="py-2 h-fit">
 
 
     <div class="flex items-center justify-between w-full h-12 px-2">
-        <button (click)="directMessagesToggle()" class="flex items-center gap-4">
+        <button (click)="directMessagesToggle()" class="flex items-center gap-4 py-3">
             <img class="size-8" id="driectArrow" src="/assets/icons/arrow_drop_down.svg" alt="">
             <div class="flex gap-2 text-xl font-bold">
                 <img class="size-6" src="/assets/icons/account_circle.svg" alt="">
