--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -22,7 +22,7 @@
         <div class="flex flex-col w-full h-[100% - 3rem] my-6 pb-4 bg-white rounded-[30px]">
             <app-chat-header [chatType]="'channel'" class="mb-[10px]"></app-chat-header>
             <div class="flex flex-1 w-full overflow-y-auto">
-                <app-chat-messages [messages]="channelMessageService.messages" [chatType]="'channel'"></app-chat-messages>
+                <app-chat-messages class="flex flex-col w-full" [messages]="channelMessageService.messages" [chatType]="'channel'"></app-chat-messages>
             </div>
             <app-chat-input class=""></app-chat-input>
         </div>
