--- a/src/app/components/shared/popUp/edit-channel/edit-channel.component.html
+++ b/src/app/components/shared/popUp/edit-channel/edit-channel.component.html
@@ -1,55 +1,31 @@
-<section class="flex flex-col w-screen h-screen border border-black">
-
-    <div class="flex justify-between px-4 py-10 text-xl font-bold border border-black">
+<section class="flex flex-col w-screen h-screen bg-white  max-w-[870px] lg:h-fit rounded-[30px] lg:p-4">
+    
+    <div class="flex justify-between px-4 py-10 text-xl font-bold">
         <h2># Entwicklerteam</h2>
 
         <img class="hover:scale-[1.1] cursor-pointer duration-150" src="/assets/icons/close.svg" alt="">
     </div>
 
-    <div class="flex flex-col w-full h-full gap-6 px-4 py-5 overflow-auto text-lg border border-blue-500">
+
+    <div
+        class="flex flex-col w-full h-full gap-6 px-4 py-5 overflow-auto text-lg">
 
 
 
-        <div class="h-fit border border-black rounded-[20px] p-5 flex flex-col gap-5">
-            <div class="flex justify-between font-bold">
-                <span>Channel-Name</span>
-                <img class="cursor-pointer hover:scale-[1.1] duration-150" src="/assets/icons/edit.svg" alt="">
-            </div>
+        <app-edit-name></app-edit-name>
 
-            <p># Entwicklerteam</p>
+        <app-edit-description></app-edit-description>
+
+        <app-members class="lg:hidden"></app-members>
+
+
+        <div class="flex justify-end w-full">
+            <button class="px-6 py-3 bg-purple1 rounded-[25px] text-white font-bold text-lg hover:scale-[1.1] duration-150 active:scale-[0.9]">
+                Channel verlassen
+            </button>
         </div>
-
-
-
-
-        <div class="h-fit border border-black rounded-[20px] p-5 gap-5 flex flex-col">
-            <div class="flex justify-between font-bold">
-                <span>Beschreibung</span>
-                <img class="cursor-pointer hover:scale-[1.1] duration-150" src="/assets/icons/edit.svg" alt="">
-            </div>
-
-            <p>
-                Dieser Channel ist für alles rund um #dfsdf vorgesehen. Hier kannst du zusammen mit deinem Team Meetings
-                abhalten, Dokumente teilen und Entscheidungen treffen.
-            </p>
-
-            <span class="w-full border border-[#ADB0D9]"></span>
-
-            <div class="flex flex-col border">
-                Erstellt von
-                <span>Noah Braun</span>
-            </div>
-        </div>
-
-
-
-
-        <app-members></app-members>
-
-
-
-
 
     </div>
+
 
 </section>
