--- a/src/app/components/shared/popUp/members/members.component.html
+++ b/src/app/components/shared/popUp/members/members.component.html
@@ -1,4 +1,4 @@
-<section class="border border-black shadow-2xl h-96 rounded-3xl max-w-[400px] bg-white py-10 px-3 flex flex-col gap-5">
+<section class="flex flex-col w-full gap-5 px-3 py-10 bg-white border border-black shadow-2xl h-96 rounded-3xl">
 
 
     <div class="flex items-center justify-between h-10 px-5">
