edit channel overlay open in chat comp

--- a/src/app/components/shared/popUp/edit-channel/edit-channel.component.html
+++ b/src/app/components/shared/popUp/edit-channel/edit-channel.component.html
@@ -3,7 +3,7 @@
     <div class="flex justify-between px-4 py-10 text-xl font-bold">
         <h2># Entwicklerteam</h2>
 
-        <img class="hover:scale-[1.1] cursor-pointer duration-150" src="/assets/icons/close.svg" alt="">
+        <img (click)="mainService.editChannelPopup()" class="hover:scale-[1.1] cursor-pointer duration-150" src="/assets/icons/close.svg" alt="">
     </div>
 
 
