--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -59,6 +59,6 @@
 
 
 
-<div class="flex justify-center items-center absolute top-0 bottom-0 left-0 right-0 bg-white lg:bg-[rgba(0,0,0,0.1)]">
+<div [ngClass]="{hidden: channelNavService.hideEditChannelPopUp()}" class="flex justify-center items-center absolute top-0 bottom-0 left-0 right-0 bg-white lg:bg-[rgba(0,0,0,0.1)]">
   <app-edit-channel></app-edit-channel>
 </div>
