--- a/src/app/components/shared/popUp/profile/profile.component.html
+++ b/src/app/components/shared/popUp/profile/profile.component.html
@@ -1,11 +1,11 @@
 <section
-  class="flex flex-col min-w-80 w-full h-fit mt-[80px] rounded-[30px] gap-9 p-10 text-xl shadow-2xl border-2 border-rgba(255, 255, 255, 1)"
+  class="fixed top-20 left-4 right-4 bg-white/100 z-50 flex justify-center items-center flex flex-col h-fit mt-[88px] rounded-[30px] gap-9 p-10 text-xl shadow-2xl border-2 border-rgba(255, 255, 255, 1)"
 >
   <div class="flex justify-between w-full">
     <span class="text-2xl font-bold">Profil</span>
 
     <img
-      (click)="closeProfile()"
+      (click)="close()"
       class="cursor-pointer hover:scale-[1.3] duration-200 active:scale-[0.9]"
       src="/assets/icons/close.svg"
       alt=""
@@ -18,19 +18,8 @@
 
   <div class="flex flex-col h-20">
     <div class="flex justify-between">
-      <p class="flex text-3xl font-bold w-fit">Noah Braun</p>
+      <p class="flex text-3xl font-bold w-fit mr-[24px]">Noah Braun</p>
 
-      <div
-        class="p-[1%] size-9 bg-primary rounded-[50%] cursor-pointer hover:scale-[1.2] duration-200 active:scale-[0.9] xs:hidden"
-      >
-        <img class="size-full" src="/assets/icons/edit.svg" alt="" />
-      </div>
-
-      <!--   <span
-        class="text-lg cursor-pointer text-purple3 hover:scale-[1.2] duration-200 active:scale-[0.9] hidden xs:block"
-      >
-        Bearbeiten
-      </span> -->
       <img
         [routerLink]="['/edit-profil']"
         class="cursor-pointer hover:scale-[1.3] duration-200 active:scale-[0.9] w-[40px] h-[40px] rounded-[40px] p-[3px] gap-[0px] transition-all ease-out duration-[100ms]"
