--- a/src/app/components/shared/popUp/edit-channel/edit-name/edit-name.component.html
+++ b/src/app/components/shared/popUp/edit-channel/edit-name/edit-name.component.html
@@ -1,8 +1,16 @@
 <div class="h-fit border border-black rounded-[20px] p-5 flex flex-col gap-5">
     <div class="flex justify-between font-bold">
         <span>Channel-Name</span>
-        <img class="cursor-pointer hover:scale-[1.1] duration-150" src="/assets/icons/edit.svg" alt="">
+        <img (click)="editName()" class="cursor-pointer hover:scale-[1.1] duration-150" src="/assets/icons/edit.svg" alt="">
     </div>
 
-    <p># Entwicklerteam</p>
+
+    @if(edit){
+        <input [(ngModel)]="channelService.channels[0].name" class="px-5 py-4 border border-black rounded-[40px]" type="text">
+    } @else {
+        <p># {{channelService.channels[0].name}}</p>
+    }
+    
+
+
 </div>
