overlay edit-profil

--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -19,7 +19,7 @@
   (close)="closeOverlay()"
 ></app-log-out-mobile>
 <app-profile *ngIf="ui.showProfileOverlay()"></app-profile>
-
+<app-edit-profil *ngIf="ui.showEditProfileOverlay()"></app-edit-profil>
 <!-- Overlay-Popup unten -->
 <div
   *ngIf="showOverlay"
