--- a/src/app/components/shared/popUp/profile/profile.component.html
+++ b/src/app/components/shared/popUp/profile/profile.component.html
@@ -1,5 +1,5 @@
 <section
-  class="fixed top-20 left-4 right-4 bg-white/100 z-50 flex justify-center items-center flex flex-col h-fit mt-[88px] rounded-[30px] gap-9 p-10 text-xl shadow-2xl border-2 border-rgba(255, 255, 255, 1)"
+  class="fixed top-24 left-4 right-4 bg-white/100 z-50 flex justify-center items-center flex flex-col h-fit mt-[88px] rounded-[30px] gap-9 p-10 text-xl shadow-2xl border-2 border-rgba(255, 255, 255, 1)"
 >
   <div class="flex justify-between w-full">
     <span class="text-2xl font-bold">Profil</span>
@@ -21,7 +21,7 @@
       <p class="flex text-3xl font-bold w-fit mr-[24px]">Noah Braun</p>
 
       <img
-        [routerLink]="['/edit-profil']"
+        (click)="openEditProfileOverlay()"
         class="cursor-pointer hover:scale-[1.3] duration-200 active:scale-[0.9] w-[40px] h-[40px] rounded-[40px] p-[3px] gap-[0px] transition-all ease-out duration-[100ms]"
         src="/assets/icons/edit2.svg"
         alt=""
