--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -10,7 +10,7 @@
 
 
   @if (channelNavService.showNav()) {
-  <div class="flex flex-col w-full h-[100% - 3rem] lg:max-w-[366px] my-6  rounded-[30px] border border-blue-700 overflow-hidden">
+  <div class="flex flex-col w-full h-[100% - 3rem] lg:max-w-[366px] my-6  rounded-[30px]  overflow-hidden bg-white">
     <app-search class="lg:hidden"></app-search>
     <app-navigation class="w-full h-full"></app-navigation>
   </div>
@@ -59,6 +59,7 @@
 
 
 
-<div [ngClass]="{hidden: channelNavService.hideEditChannelPopUp()}" class="flex justify-center items-center absolute top-0 bottom-0 left-0 right-0 bg-white lg:bg-[rgba(0,0,0,0.1)]">
+<div [ngClass]="{hidden: channelNavService.hideEditChannelPopUp()}"
+  class="flex justify-center items-center absolute top-0 bottom-0 left-0 right-0 bg-white lg:bg-[rgba(0,0,0,0.1)]">
   <app-edit-channel></app-edit-channel>
 </div>
