--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -39,7 +39,7 @@
                         <div class="w-full h-[1px] bg-lightpurple"></div>
                     </div>
                 }
-                <div class="flex gap-5 mt-[25px] px-4 py-2 cursor-pointer hover:bg-primary" [ngClass]="{ 'flex-row-reverse': fromCurrentUser(message.user.name),  '[&>div>#msg-content]:hover:bg-white': !fromCurrentUser(message.user.name)}">
+                <div id="{{ chatType }}{{ i }}" (click)="channelNavService.editMessage(i, chatType)" class="flex gap-5 mt-[25px] px-4 py-2 cursor-pointer hover:bg-primary" [ngClass]="{ 'flex-row-reverse': fromCurrentUser(message.user.name),  '[&>div>#msg-content]:hover:bg-white': !fromCurrentUser(message.user.name)}">
                     <div class="w-max">
                         <img class="min-w-[50px] size-[50px] rounded-full" src="assets/imgs/avatar{{ message.user.avatar }}.svg" alt="Avatar">
                     </div>
@@ -77,7 +77,7 @@
         <!-- } -->
     </div>
     @if (chatType === 'dm') {
-        <div class="flex flex-col gap-6 px-4 ml-4">
+        <div class="flex flex-col gap-6 px-4 pt-4 ml-4">
             <div class="flex items-end">
                 <img class="size-[88px] rounded-full" src="assets/imgs/avatar1.svg" alt="Avatar">
                 <p class="text-2xl font-bold">Sofia Müller</p>
