--- a/src/app/components/legal-notice-page/legal-notice-page.component.html
+++ b/src/app/components/legal-notice-page/legal-notice-page.component.html
@@ -1,7 +1,7 @@
 <section class="flex items-center justify-center w-full h-screen bg-primary">
 
 
-    <div class="bg-white min-w-[670px] min-h-[470px] rounded-[30px] shadow-md py-12 px-14 flex flex-col gap-8">
+    <div class="bg-white lg:min-w-[670px] min-h-[470px] rounded-[30px] shadow-md py-12 px-14 flex flex-col gap-8">
 
         <img routerLink="" class="size-10 hover:scale-[1.1] cursor-pointer duration-150" src="/assets/icons/back.svg" alt="">
 
