--- a/src/app/components/shared/popUp/edit-channel/edit-name/edit-name.component.html
+++ b/src/app/components/shared/popUp/edit-channel/edit-name/edit-name.component.html
@@ -1,16 +1,26 @@
 <div class="h-fit border border-black rounded-[20px] p-5 flex flex-col gap-5">
     <div class="flex justify-between font-bold">
         <span>Channel-Name</span>
-        <img (click)="editName()" class="cursor-pointer hover:scale-[1.1] duration-150" src="/assets/icons/edit.svg" alt="">
+
+        
+        @if (edit) {
+        <button (click)="editName()">Speichern</button>
+        } @else {
+        <button class="hidden sm:block" (click)="editName()">Bearbeiten</button>
+        <img (click)="editName()" class="sm:hidden cursor-pointer hover:scale-[1.1] duration-150"
+            src="/assets/icons/edit.svg" alt="">
+        }
+
     </div>
 
 
     @if(edit){
-        <input [(ngModel)]="channelService.channels[0].name" class="px-5 py-4 border border-black rounded-[40px]" type="text">
+    <input [(ngModel)]="channelService.channels[0].name" class="px-5 py-4 border border-black rounded-[40px]"
+        type="text">
     } @else {
-        <p># {{channelService.channels[0].name}}</p>
+    <p># {{channelService.channels[0].name}}</p>
     }
-    
+
 
 
 </div>
