edit channel style

--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -6,7 +6,7 @@
   Msg
 </button>
 
-<section class="flex h-full gap-3 p-3 border border-green-600 bg-primary">
+<section class="flex h-full gap-3 p-3 bg-primary">
 
 
   @if (channelNavService.showNav()) {
