--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="w-full h-[80px] flex justify-between items-center bg-header pr-[16px] pl-[16px]">
   <img src="assets/imgs/logo.svg" alt="DaBubble Logo" class="h-16 mt-4" />
 
-  <app-search class="w-[50%] hidden lg:block"></app-search>
+  <app-search class="w-[50%] hidden lg:block self-end"></app-search>
 
   <img src="assets/imgs/avatar6.svg" alt="DaBubble avatar" class="h-16 mt-4 rounded-full cursor-pointer"
     (click)="toggleOverlay()" />
