--- a/src/app/components/shared/popUp/edit-channel/edit-description/edit-description.component.html
+++ b/src/app/components/shared/popUp/edit-channel/edit-description/edit-description.component.html
@@ -1,16 +1,16 @@
-<div class="h-fit border border-black rounded-[20px] p-5 gap-5 flex flex-col">
+<div class="h-fit border border-lightpurple rounded-[20px] p-5 gap-5 flex flex-col">
     <div class="flex justify-between font-bold">
         <span>Beschreibung</span>
 
 
         @if (edit) {
-            <button (click)="editDescription()">Speichern</button>
-            } @else {
-            <button class="hidden sm:block" (click)="editDescription()">Bearbeiten</button>
-            <img (click)="editDescription()" class="sm:hidden cursor-pointer hover:scale-[1.1] duration-150"
-                src="/assets/icons/edit.svg" alt="">
-            }
-<!-- 
+        <button class="text-purple3" (click)="editDescription()">Speichern</button>
+        } @else {
+        <button class="hidden sm:block text-purple3" (click)="editDescription()">Bearbeiten</button>
+        <img (click)="editDescription()" class="sm:hidden cursor-pointer hover:scale-[1.1] duration-150"
+            src="/assets/icons/edit.svg" alt="">
+        }
+        <!-- 
         <img (click)="editDescription()" class="cursor-pointer hover:scale-[1.1] duration-150"
             src="/assets/icons/edit.svg" alt=""> -->
     </div>
@@ -19,7 +19,7 @@
 
     @if(edit){
     <textarea [(ngModel)]="channelService.channels[0].description"
-        class="px-5 py-4 border h-48 border-black rounded-[40px]" name="" id=""></textarea>
+        class="px-5 py-4 h-40 border border-lightpurple rounded-[40px]" name="" id=""></textarea>
     } @else {
     <p>
         {{channelService.channels[0].description}}
