--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -2,7 +2,7 @@
 
 
 
-@if (!channelNavService.mobile) {
+@if (!channelNavService.mobile) {}
 <button
   (click)="channelNavService.toggleNav()"
   class="w-[60px] h-fit fixed top-[581px] left-0 rounded-tr-[30px] rounded-br-[30px] pt-[23px] pr-[14px] pb-[23px] pl-[14px] flex flex-col items-center justify-center gap-2 shadow-[4px_4px_7px_rgba(0,0,0,0.2)] bg-transparent text-black hover:bg-white/100 transition-all ease-in duration-100 z-50"
@@ -16,7 +16,7 @@
     /></span>
     }
   </span>
-  <span class="rotate-180 writing-vertical-lr text-l text-center leading-tight">
+  <span class="leading-tight text-center rotate-180 writing-vertical-lr text-l">
     {{
       channelNavService.nav
         ? "Workspace-Menü\nschließen"
