--- a/src/app/components/shared/chat-header/chat-header.component.html
+++ b/src/app/components/shared/chat-header/chat-header.component.html
@@ -23,12 +23,12 @@
     <div class="flex items-center gap-[10px]">
         @if (chatType === 'channel') {
             <div class="flex items-center px-[10px] py-[3px] rounded-full cursor-pointer hover:bg-primary max-[1024px]:hidden" [ngClass]="{'hidden': channelNavService.hideChannelMembers}">
-                @for (user of channelService.channels[0].users; track user; let i = $index) {
+                @for (user of channelService.channels2[0].users; track user; let i = $index) {
                     @if (i < 4) {
                         <img class="size-9 mr-[-10px] border-2 border-white rounded-full" src="assets/imgs/avatar{{ user.avatar }}.svg" alt="Member">
                     } @else if (i === 4) {
                         <img class="border-2 border-white rounded-full cursor-pointer size-9" src="assets/imgs/avatar3.svg" alt="Member">
-                        <span class="ml-[10px]">{{ channelService.channels[0].users?.length}}</span>
+                        <span class="ml-[10px]">{{ channelService.channels2[0].users?.length}}</span>
                     }
                 }
             </div>
