--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -7,7 +7,7 @@
   />
   
   <div
-    class="flex flex-col items-center justify-center min-h-screen px-4 transition-opacity duration-700 ease-in-out"
+    class="flex flex-col items-center justify-center min-h-screen px-4 transition-opacity duration-700 ease-in-out bg-primary"
     [ngClass]="{ 'opacity-0': !showContent, 'opacity-100': showContent }"
   >
     <img
