--- a/src/app/components/shared/popUp/edit-channel/edit-name/edit-name.component.html
+++ b/src/app/components/shared/popUp/edit-channel/edit-name/edit-name.component.html
@@ -13,13 +13,15 @@
 
     </div>
 
-
-    @if(edit){
-    <input [(ngModel)]="channelService.channels[0].name" class="px-5 py-4 border border-lightpurple rounded-[40px]"
-        type="text">
-    } @else {
-    <p># {{channelService.channels[0].name}}</p>
+    @if (channelService.channels.length > 0) {
+        @if(edit){
+            <input [(ngModel)]="channelService.editName" class="px-5 py-4 border border-lightpurple rounded-[40px]"
+            type="text">
+        } @else {
+            <p># {{channelService.channels[0].name}}</p>
+        }
     }
+
 
 
 
