--- a/src/app/components/shared/popUp/edit-channel/edit-channel.component.html
+++ b/src/app/components/shared/popUp/edit-channel/edit-channel.component.html
@@ -5,7 +5,7 @@
             <h2># {{channelService.channels[0].name}}</h2>
         }
 
-        <img (click)="mainService.editChannelPopup()" class="hover:scale-[1.1] cursor-pointer duration-150" src="/assets/icons/close.svg" alt="">
+        <img (click)="overlayService.editChannelPopup()" class="hover:scale-[1.1] cursor-pointer duration-150" src="/assets/icons/close.svg" alt="">
     </div>
 
 
