--- a/src/app/components/shared/search/search.component.html
+++ b/src/app/components/shared/search/search.component.html
@@ -1,6 +1,6 @@
 <div
   class="w-full h-[48px] bg-white border border-gray-300 rounded-[42px] flex justify-between pt-[8px] pr-[24px] pb-[8px] pl-[24px]">
-  <input type="text" [(ngModel)]="mainNavService.searchValue" placeholder="Search..."
+  <input type="text" [(ngModel)]="filterService.searchValue" placeholder="Search..."
     class="w-full h-full text-gray-800 placeholder-gray-400 bg-transparent border-none focus:outline-none" />
   <img src="assets/imgs/icons/icons.svg" alt="" class="w-[32px h-[32px]]" />
 </div>
