--- a/src/app/components/shared/chat-header/chat-header.component.html
+++ b/src/app/components/shared/chat-header/chat-header.component.html
@@ -1,6 +1,6 @@
 <section class="flex items-center justify-between box-border bg-white py-[13px] px-4 header rounded-ss-[30px] rounded-se-[30px]">
     @if (chatType === 'channel') {
-        <div class="flex items-center gap-[14px] py-[3px] px-[10px] w-max rounded-full cursor-pointer text-xl font-bold hover:bg-primary" (click)="channelNavService.editChannelPopup()">
+        <div class="flex items-center gap-[14px] py-[3px] px-[10px] w-max rounded-full cursor-pointer text-xl font-bold hover:bg-primary" (click)="overlayService.editChannelPopup()">
             <img class="size-[22px]" src="assets/icons/hashtag.svg" alt="hashtag"><span>{{ channelService.currentChannel?.name }}</span><img class="ml-[14px]" src="assets/icons/arrow_down.svg" alt="">
         </div>
     } @else if (chatType === 'thread') {
@@ -22,7 +22,7 @@
     }
     <div class="flex items-center gap-[10px]">
         @if (chatType === 'channel') {
-            <div class="flex items-center px-[10px] py-[3px] rounded-full cursor-pointer hover:bg-primary max-[1024px]:hidden" [ngClass]="{'hidden': channelNavService.hideChannelMembers}">
+            <div class="flex items-center px-[10px] py-[3px] rounded-full cursor-pointer hover:bg-primary max-[1024px]:hidden" [ngClass]="{'hidden': mainNavService.hideChannelMembers}">
                 @for (user of channelService.channels2[0].users; track user; let i = $index) {
                     @if (i < 4) {
                         <img class="size-9 mr-[-10px] border-2 border-white rounded-full" src="assets/imgs/avatar{{ user.avatar }}.svg" alt="Member">
@@ -36,7 +36,7 @@
                 <img src="assets/icons/add_user.svg" alt="Add user">
             </button>
         } @else if (chatType === 'thread' || chatType === 'search') {
-            <button (click)="channelNavService.openChannel()" class="flex items-center justify-center rounded-full size-[34px] hover:bg-primary">
+            <button (click)="mainNavService.openChannel()" class="flex items-center justify-center rounded-full size-[34px] hover:bg-primary">
                 <img src="assets/icons/close.svg" alt="Add user">
             </button>
         }
