--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -39,7 +39,7 @@
                       <div class="w-full h-[1px] bg-lightpurple"></div>
                   </div>
               }
-              <div id="{{ chatType }}{{ i }}" (click)="channelNavService.editMessage(i, chatType)" class="flex gap-5 mt-[25px] px-4 py-2 cursor-pointer hover:bg-primary" [ngClass]="{ 'flex-row-reverse': fromCurrentUser(message.user.name),  '[&>div>#msg-content]:hover:bg-white': !fromCurrentUser(message.user.name)}">
+              <div id="{{ chatType }}{{ i }}" (click)="mainNavService.editMessage(i, chatType)" class="flex gap-5 mt-[25px] px-4 py-2 cursor-pointer hover:bg-primary" [ngClass]="{ 'flex-row-reverse': fromCurrentUser(message.user.name),  '[&>div>#msg-content]:hover:bg-white': !fromCurrentUser(message.user.name)}">
                   <div class="w-max">
                       <img class="min-w-[50px] size-[50px] rounded-full" src="assets/imgs/avatar{{ message.user.avatar }}.svg" alt="Avatar">
                   </div>
@@ -54,7 +54,7 @@
                       @if (message.answers) {
                           @if (chatType !== 'thread' && message.answers.length > 0) {
                               <div class="cursor-pointer flex flex-col xs:flex-row xs:items-center xs:gap-[20px]" [ngClass]="{'self-end': fromCurrentUser(message.user.name)}">
-                                  <span (click)="channelNavService.openThread()" class="text-base text-purple3 hover:font-bold">{{ message.answers.length }} Antworten</span>
+                                  <span (click)="mainNavService.openThread()" class="text-base text-purple3 hover:font-bold">{{ message.answers.length }} Antworten</span>
                                   <span class="text-sm text-textgray">Letzte Antwort {{ message.answers[message.answers.length - 1].time }}</span>
                               </div>
                           }
