--- a/src/app/components/shared/popUp/add-channel/add-channel.component.html
+++ b/src/app/components/shared/popUp/add-channel/add-channel.component.html
@@ -2,7 +2,7 @@
   <div class="flex justify-between">
     <h2 class="text-2xl font-bold">Channel erstellen</h2>
 
-    <img (click)="channelNavService.addCannelPopup()"
+    <img (click)="overlayService.addCannelPopup()"
       class="hover:scale-[1.1] duration-150 active:scale-[0.9] cursor-pointer" src="/assets/icons/close.svg" alt="" />
   </div>
 
@@ -13,19 +13,19 @@
 
   <div class="flex flex-col gap-5">
     <span class="font-bold">Channel-Name</span>
-    <input [(ngModel)]="channelNavService.newChannel.name" class="px-5 py-4 border border-black rounded-[40px]" type="text"
+    <input [(ngModel)]="overlayService.newChannel.name" class="px-5 py-4 border border-black rounded-[40px]" type="text"
       placeholder="#  z.B. Kooperationsprojekte" />
   </div>
 
   <div class="flex flex-col gap-5">
     <span class="font-bold">Beschreibung</span>
     <!-- <input class="px-5 py-4 border border-black rounded-[40px]" type="text" placeholder="Dein Text hier" /> -->
-     <textarea [(ngModel)]="channelNavService.newChannel.description" class="px-5 py-4 border border-black h-32 rounded-[40px]" placeholder="Dein Text hier" name="" id=""></textarea>
+     <textarea [(ngModel)]="overlayService.newChannel.description" class="px-5 py-4 border border-black h-32 rounded-[40px]" placeholder="Dein Text hier" name="" id=""></textarea>
   </div>
 
   <!-- <button (click)="createChannel()">Create</button> -->
 
-  <button (click)="channelNavService.addUserPopup()"
+  <button (click)="overlayService.addUserPopup()"
     class="w-32 h-12 bg-purple1 rounded-[25px] text-white hover:scale-[1.1] duration-150 active:scale-[0.9] self-end">
     Erstellen
   </button>
