--- a/src/app/components/shared/popUp/add-user1/add-user1.component.html
+++ b/src/app/components/shared/popUp/add-user1/add-user1.component.html
@@ -1,4 +1,4 @@
-@if (!channelNavService.hideAddUserPopUp()) {
+@if (!overlayService.hideAddUserPopUp()) {
 <div appClickOutside (appClickOutside)="closeOverlay()"
   class="fixed bottom-0 left-0 w-full h-fit bg-white px-[26px] py-[30px] rounded-t-[30px] flex flex-col items-start shadow-lg z-50 gap-[25px] border-2 border-rgba(255, 255, 255, 1) overlay-animated">
   <div class="flex justify-between w-full">
@@ -23,14 +23,14 @@
     </label>
     @if (addOption === 'custom') {
     <div
-      class="pl-7 w-full h-[48px] bg-white border border-gray-300 rounded-[42px] flex justify-between pt-[8px] pr-[24px] pb-[8px] pl-[24px]">
+      class="pl-7 w-full h-[48px] bg-white border border-gray-300 rounded-[42px] flex justify-between pt-[8px] pr-[24px] pb-[8px]">
       <input type="text" [(ngModel)]="customName" placeholder="Name eingeben..."
         class="w-full h-full text-gray-800 placeholder-gray-400 bg-transparent border-none focus:outline-none" />
     </div>
     }
   </div>
   <div class="flex justify-end w-full gap-4 mt-4">
-    <button (click)="channelNavService.createChannel()"
+    <button (click)="overlayService.createChannel()"
       class="w-[141px] h-[49px] rounded-[50px] border-2 border-purple2 bg-purple1 text-white">
       Erstellen
     </button>
